sumo/tests/sumo/output/e1/errors/freq_empty/errors.sumo
Error: Attribute 'freq' in definition of e1-detector '4/1to3/1' is empty.
Quitting (on error).
